# hyperspectral_imaging_parallelization

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
ISRA/ACC/: ISRA.cpp  Makefile
ISRA/ACC Multicore/: ISRA.cpp  Makefile  RS_algorithm.cpp
ISRA/OMP/: ISRA.cpp  Makefile  RS_algorithm.cpp
ISRA/OMP MKL/CPU/: GNUmakefile  RS_algorithm.cpp  isra.cpp
ISRA/OMP MKL/GPU (Offload)/: GNUmakefile  isra.cpp
ISRA/SYCL/: GNUmakefile  isra.cpp
ISRA/Serie/: Makefile  isra.cpp
VCA/ACC/: Makefile  VCA.cpp
VCA/ACC Multicore/: Makefile  VCA.cpp
VCA/OMP/: Makefile  VCA.cpp
VCA/OMP MKL/CPU/: GNUmakefile  VCA.cpp
VCA/OMP MKL/GPU OFFLOADING/: GNUmakefile  VCA.cpp
VCA/SYCL/: GNUmakefile  VCA.cpp
VCA/Serie/: Makefile  VCA_IT.cpp
VD/ACC/: Makefile  VD.cpp
VD/ACC Multicore/: Makefile  VD.cpp
VD/OMP/: Makefile  VD.cpp
VD/OMP MKL/CPU/: GNUmakefile  VD.cpp
VD/OMP MKL/GPU (Offload)/: GNUmakefile  VD.cpp
VD/SYCL/: GNUmakefile  VD.cpp
VD/Serie/: Makefile  VD.cpp
common/: CMakeLists.txt  main.cpp
common/interfaces/: isra_interface.hpp  vca_interface.hpp  vd_interface.hpp
common/utils/: file_utils.hpp  matrix_operations.hpp
data/test/: cuprite_real_signatures.txt
kokkos/: CMakeLists.txt  kokkos_conf.hpp
kokkos/ISRA/: CMakeLists.txt  isra.cpp  isra.hpp
kokkos/VCA/: CMakeLists.txt  vca.cpp  vca.hpp
kokkos/VD/: CMakeLists.txt  vd.cpp  vd.hpp
openmp/ISRA/: CMakeLists.txt  isra.cpp  isra.hpp
openmp/VCA/: CMakeLists.txt  vca.cpp  vca.hpp
openmp/VD/: CMakeLists.txt  vd.cpp  vd.hpp
sequential/ISRA/: CMakeLists.txt  isra.cpp  isra.hpp
sequential/VCA/: CMakeLists.txt  vca.cpp  vca.hpp
sequential/VD/: CMakeLists.txt  vd.cpp  vd.hpp
src/: Makefile  common.hpp  main.cpp
src/ISRA/: isra_interface.hpp
src/ISRA/openmp/: isra.cpp  isra.hpp
src/ISRA/sequential/: isra.cpp  isra.hpp
src/ISRA/sycl/: isra.cpp  isra.hpp
src/VCA/: vca_interface.hpp
src/VCA/openmp/: vca.cpp  vca.hpp
src/VCA/sequential/: vca.cpp  vca.hpp
src/VCA/sycl/: vca.cpp  vca.hpp
src/VD/: vd.cpp  vd.hpp  vd_interface.hpp
src/VD/openmp/: vd.cpp  vd.hpp
src/VD/sequential/: vd.cpp  vd.hpp
src/VD/sycl/: vd.cpp  vd.hpp
src/makefiles/: Makefile_openmp  Makefile_sequential  Makefile_sycl
src/utils/: file_utils.hpp  sycl_selector.cpp  sycl_selector.hpp
sycl/: CMakeLists.txt
sycl/ISRA/: CMakeLists.txt  isra.cpp  isra.hpp
sycl/VCA/: CMakeLists.txt  vca.cpp  vca.hpp
sycl/VD/: CMakeLists.txt  vd.cpp  vd.hpp
sycl/utils/: CMakeLists.txt  sycl_selector.cpp
unittests/: CMakeLists.txt
unittests/VCA/: CMakeLists.txt  Makefile  vca.cpp
unittests/common/: CMakeLists.txt
unittests/common/utils/: CMakeLists.txt  matrix_operations.cpp
unittests/sequential/: CMakeLists.txt
unittests/sequential/VCA/: CMakeLists.txt  vca.cpp
unittests/utils/: CMakeLists.txt  Makefile  matrix_operations.cpp
